# pco_exs

./: .gitignore  README.md  exercises.txt
question_01_exclusion_mutuelle/: README.md
question_01_exclusion_mutuelle/code/: CMakeLists.txt  exclusion.pro  main.cpp
question_05_synchronisation/: README.md
question_05_synchronisation/code/: main.cpp
question_06_sequentialite/: README.md
question_06_sequentialite/code/: CMakeLists.txt  main_joins.cpp  main_semaphores.cpp
question_07_sequentialite/: README.md
question_07_sequentialite/code/: CMakeLists.txt  main_joins.cpp  main_semaphores.cpp
question_08_sequentialite/: README.md
question_08_sequentialite/code/: CMakeLists.txt  main.cpp
question_09_sequentialite/: README.md
question_09_sequentialite/code/: CMakeLists.txt  main.cpp
question_10_mutex_from_semaphore/: README.md
question_10_mutex_from_semaphore/code/: CMakeLists.txt  main.cpp  mutexfromsem.h
question_11_barrier/: README.md
question_11_barrier/code/: CMakeLists.txt  main.cpp  pcobarrier_conditionVariable.h  pcobarrier_hoareMonitor.h  pcobarrier_semaphore.h
question_12_bridge_simple/: README.md
question_12_bridge_simple/code/: CMakeLists.txt  bridgemanager.h  bridgemanager_condvar.h  bridgemanager_semaphore.h  bridgemanagermonitor.h  main.cpp  main_condvar.cpp  main_monitor.cpp  main_semaphore.cpp
question_13_bridge_float/: README.md
question_13_bridge_float/code/: CMakeLists.txt  main.cpp
question_14_bridge_float_stop/: README.md
question_14_bridge_float_stop/code/: CMakeLists.txt
question_15_prodcons_simple_2/: README.md
question_15_prodcons_simple_2/code/: CMakeLists.txt  buffer2conso.h  prodcons1.cpp
question_16_prodcons_multiple_2/: README.md
question_16_prodcons_multiple_2/code/: CMakeLists.txt  buffer2conso.h  prodcons1.cpp
question_17_semaphore_from_monitor/: README.md
question_17_semaphore_from_monitor/code/: CMakeLists.txt  main.cpp  semaphorefrommonitor.h
question_18_preloader/: README.md
question_18_preloader/code/: CMakeLists.txt  loader.h  main.cpp  preloader.pro
question_19_toilets/: README.md
question_19_toilets/code/: CMakeLists.txt  abstracttoilets.h  main.cpp  toilets.h  toilets.pro
question_20_reader_writer_priority/: README.md
question_20_reader_writer_priority/code/: CMakeLists.txt  readerwriter.cpp  readerwriterpriowritergeneral.h
question_21_reader_writer_class_ab/: README.md
question_21_reader_writer_class_ab/code/: CMakeLists.txt  readerwriter.cpp  readerwriter.pro  readerwriterclassab.h
